--- a/src/app/modules/Reports/schoolreports/resultboard/resultboard.component.html
+++ b/src/app/modules/Reports/schoolreports/resultboard/resultboard.component.html
@@ -1,5 +1,11 @@
-<div style="width:100%" fxLayout="row" fxLayoutAlign="space-around center">
+<div fxLayout="row" fxLayoutAlign="space-around center">
     <mat-tab-group #changeEvent [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
+        <mat-tab>
+            <ng-template mat-tab-label>
+                <mat-icon>info</mat-icon>Exam Time Table
+            </ng-template>
+            <app-examtimetable></app-examtimetable>
+        </mat-tab>
         <mat-tab>
             <ng-template mat-tab-label>
                 <mat-icon>info</mat-icon>Exam Results
@@ -18,13 +24,8 @@
             </ng-template>
             <app-today-collection></app-today-collection>
         </mat-tab>        
+        
         <!-- <mat-tab>
-            <ng-template mat-tab-label>
-                <mat-icon>info</mat-icon>Student Exam Subject Marks
-            </ng-template>
-            <app-examstudentsubjectresult></app-examstudentsubjectresult>
-        </mat-tab>
-        <mat-tab>
             <ng-template mat-tab-label>
                 <mat-icon>info</mat-icon>Student Activity
             </ng-template>
