--- a/src/app/modules/auth/change-password/change-password.component.html
+++ b/src/app/modules/auth/change-password/change-password.component.html
@@ -27,7 +27,7 @@
                     <div class="form-group">
                         <label for="ConfirmPassword">ConfirmPassword</label>
                         <input type="password" class="form-control" autocomplete="Off" name="ConfirmPassword"
-                            [(ngModel)]="form.ConfirmPassword" required minlength="3" maxlength="20"
+                            [(ngModel)]="form.ConfirmPassword" required minlength="3" [maxlength]="20"
                             #ConfirmPassword="ngModel" />
                         <div class="alert-danger" *ngIf="ConfirmPassword.errors && f.submitted">
                             <div *ngIf="ConfirmPassword.errors.required">Confirm password is required</div>
