--- a/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.html
+++ b/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.html
@@ -18,7 +18,7 @@
             <div fxLayout="row wrap" fxLayoutAlign="space-between center">
                 <mat-form-field appearance="outline">
                     <mat-label>Enter album</mat-label>
-                    <input formControlName="UpdatedFileFolderName" #album matInput maxlength="100" autocomplete="off">
+                    <input formControlName="UpdatedFileFolderName" #album matInput [maxlength]="100" autocomplete="off">
                     <!-- <mat-hint align="end">{{album.value?.length || 0}}/100</mat-hint> -->
                 </mat-form-field>       
                 <span style="margin: 5px;">or</span>         
