--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -58,7 +58,7 @@
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     <mat-form-field [style.width.px]="50">                        
-                        <input matInput (blur)="onBlur(element)" [(value)]="element.RollNo" [(ngModel)]="element.RollNo" autocomplete="Off" maxlength="10">
+                        <input matInput (blur)="onBlur(element)" [(value)]="element.RollNo" [(ngModel)]="element.RollNo" autocomplete="Off" [maxlength]="10">
                     </mat-form-field>                                        
                 </mat-cell>
             </ng-container>
@@ -79,7 +79,7 @@
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="250">
                         <mat-select (selectionChange)="onBlur(element)" [(value)]="element.FeeTypeId" [(ngModel)]="element.FeeTypeId">
-                            <mat-option *ngFor="let item of FeeTypes" [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>    
+                            <mat-option *ngFor="let item of FeeTypes" [value]="item.FeeTypeId">{{item.FeeTypeName}}</mat-option>    
                         </mat-select>
                     </mat-form-field>                  
                 </mat-cell>
