--- a/src/app/modules/ClassSubject/classsubjectmapping/classsubjectdashboard.component.html
+++ b/src/app/modules/ClassSubject/classsubjectmapping/classsubjectdashboard.component.html
@@ -19,13 +19,13 @@
             </button>
         </form>    
         <mat-table #table [dataSource]="dataSource">
-            <ng-container matColumnDef="ClassName">
+            <!-- <ng-container matColumnDef="ClassName">
                 <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Class/stream
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     {{element.ClassName}}
                 </mat-cell>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="SubjectName">
                 <mat-header-cell *matHeaderCellDef> Subject </mat-header-cell>
                 <mat-cell *matCellDef="let element">
