--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -30,18 +30,17 @@
             </button>
         </form>
         <mat-table #table [dataSource]="dataSource">
-            <ng-container matColumnDef="StudentClassRollNoSection">
-                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Student Class RollNo
-                    Section
+            <ng-container matColumnDef="StudentRollNo">
+                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Student-RollNo
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.StudentClassRollNoSection}}
+                    {{element.StudentRollNo}}
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="AttendanceDate">
                 <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: left;" *matCellDef="let element">
-                    {{element.AttendanceDate | date:'dd/MMM/yyyy'}}
+                    {{element.AttendanceDate | date:'dd/MM/yyyy'}}
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="AttendanceStatus">
@@ -61,7 +60,7 @@
                 <mat-header-cell *matHeaderCellDef> Remarks </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="150">
-                        <input matInput maxlength="250" autocomplete="Off" (change)="onChangeEvent(element,$event)" [(value)]="element.Remarks"
+                        <input matInput [maxlength]="250" autocomplete="Off" (change)="onChangeEvent(element,$event)" [(value)]="element.Remarks"
                             [(ngModel)]="element.Remarks">
                     </mat-form-field>
                 </mat-cell>
