--- a/src/app/modules/control/applicationfeature/applicationfeature.component.html
+++ b/src/app/modules/control/applicationfeature/applicationfeature.component.html
@@ -32,7 +32,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field>
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" maxlength="250"
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                             [(value)]="element.FeatureName" [(ngModel)]="element.FeatureName">
                         </mat-form-field>
                     </mat-cell>
