--- a/src/app/modules/control/school-fee-types/school-fee-types.component.html
+++ b/src/app/modules/control/school-fee-types/school-fee-types.component.html
@@ -21,7 +21,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field>
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" maxlength="250"
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                                 [(value)]="element.FeeTypeName" [(ngModel)]="element.FeeTypeName">
                         </mat-form-field>
                     </mat-cell>
@@ -31,7 +31,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field>
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" maxlength="250"
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                                 [(value)]="element.Description" [(ngModel)]="element.Description">
                         </mat-form-field>
                     </mat-cell>
@@ -41,7 +41,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field [style.width.pc]="50">
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" maxlength="250"
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
                                 [(value)]="element.Formula" [(ngModel)]="element.Formula">
                         </mat-form-field>
                     </mat-cell>
