--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
@@ -56,7 +56,7 @@
                         <mat-header-cell *matHeaderCellDef> User </mat-header-cell>
                         <mat-cell *matCellDef="let element">
                             <mat-form-field>
-                                <input matInput [(value)]="element.UserName" [(ngModel)]="element.UserName" autocomplete="Off" maxlength="30">
+                                <input matInput [(value)]="element.UserName" [(ngModel)]="element.UserName" autocomplete="Off" [maxlength]="30">
                             </mat-form-field>                            
                         </mat-cell>
                     </ng-container>
@@ -70,7 +70,7 @@
                         <mat-header-cell *matHeaderCellDef> Contact No. </mat-header-cell>
                         <mat-cell *matCellDef="let element">                            
                             <mat-form-field>
-                                <input matInput [(value)]="element.ContactNo" [(ngModel)]="element.ContactNo" autocomplete="Off" maxlength="20">
+                                <input matInput [(value)]="element.ContactNo" [(ngModel)]="element.ContactNo" autocomplete="Off" [maxlength]="20">
                             </mat-form-field>
                         </mat-cell>
                     </ng-container>
