--- a/src/app/modules/control/variable-config/variable-config.component.html
+++ b/src/app/modules/control/variable-config/variable-config.component.html
@@ -33,7 +33,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field [style.width.px]="350" appearance="outline">
-                            <input matInput maxlength="15" [(value)]="element.VariableName"
+                            <input matInput [maxlength]="15" [(value)]="element.VariableName"
                                 [(ngModel)]="element.VariableName">
                         </mat-form-field>
                     </mat-cell>
@@ -43,7 +43,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field [style.width.px]="350" appearance="outline">
-                            <input matInput maxlength="100" (blur)="onBlur(element,$event)" [(value)]="element.VariableDescription" autocomplete="Off"
+                            <input matInput [maxlength]="100" (blur)="onBlur(element,$event)" [(value)]="element.VariableDescription" autocomplete="Off"
                                 [(ngModel)]="element.VariableDescription">
                         </mat-form-field>
                     </mat-cell>
@@ -53,7 +53,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field appearance="outline" [style.width.px]="300">
-                            <input matInput maxlength="256" autocomplete="Off" (blur)="onBlur(element,$event)"
+                            <input matInput [maxlength]="256" autocomplete="Off" (blur)="onBlur(element,$event)"
                                 [(value)]="element.VariableFormula" [(ngModel)]="element.VariableFormula">
                         </mat-form-field>
                     </mat-cell>
