--- a/src/app/modules/student/addstudent/addstudent.component.html
+++ b/src/app/modules/student/addstudent/addstudent.component.html
@@ -17,23 +17,18 @@
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                                     <mat-form-field appearance="outline" fxFlex>
                                         <mat-label>Name</mat-label>
-                                        <input formControlName="Name" autocomplete="Off" #input matInput maxlength="50">
+                                        <input formControlName="FirstName" autocomplete="Off" #input matInput [maxlength]="50">
                                         <span class="text-danger"
-                                            *ngIf="f.Name.touched && f.Name.hasError('required')">Name
+                                            *ngIf="f.FirstName.touched && f.FirstName.hasError('required')">First Name
                                             is required.</span>
                                     </mat-form-field>
                                 </mat-grid-tile>
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                                     <mat-form-field appearance="outline" fxFlex>
-                                        <mat-label>Father's name</mat-label>
-                                        <input formControlName="FatherName" autocomplete="Off" #input matInput
-                                            maxlength="50">
-                                        <span class="text-danger"
-                                            *ngIf="f.FatherName.touched && f.FatherName.hasError('required')">Father's
-                                            name
-                                            is required.</span>
+                                        <mat-label>Last Name</mat-label>
+                                        <input formControlName="LastName" autocomplete="Off" #input matInput [maxlength]="50">                                        
                                     </mat-form-field>
-                                </mat-grid-tile>
+                                </mat-grid-tile>                                
                                 <mat-grid-tile [colspan]="1" [rowspan]="2">
                                     <div *ngIf="Id>0" fxLayout="row" fxLayoutAlign="space-between center">
                                         <span style="color:red;" *ngIf="message">{{message}}</span>
@@ -60,9 +55,20 @@
                                 </mat-grid-tile>
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                                     <mat-form-field appearance="outline" fxFlex>
+                                        <mat-label>Father's name</mat-label>
+                                        <input formControlName="FatherName" autocomplete="Off" #input matInput
+                                            [maxlength]="50">
+                                        <span class="text-danger"
+                                            *ngIf="f.FatherName.touched && f.FatherName.hasError('required')">Father's
+                                            name
+                                            is required.</span>
+                                    </mat-form-field>
+                                </mat-grid-tile>
+                                <mat-grid-tile [colspan]="1" [rowspan]="1">
+                                    <mat-form-field appearance="outline" fxFlex>
                                         <mat-label>Father's occupation</mat-label>
                                         <input formControlName="FatherOccupation" autocomplete="Off" #input matInput
-                                            maxlength="50">
+                                            [maxlength]="50">
                                         <span class="text-danger"
                                             *ngIf="f.FatherOccupation.touched && f.FatherOccupation.hasError('required')">Father's
                                             occupation is required.</span>
@@ -71,7 +77,7 @@
                                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                                     <mat-form-field appearance="outline" fxFlex>
                                         <mat-label>Mother's name</mat-label>
-                                        <input formControlName="MotherName" autocomplete="Off" matInput maxlength="50">
+                                        <input formControlName="MotherName" autocomplete="Off" matInput [maxlength]="50">
                                         <span class="text-danger"
                                             *ngIf="f.MotherName.touched && f.MotherName.hasError('required')">Mother's
                                             name
@@ -82,7 +88,7 @@
                                     <mat-form-field appearance="outline" fxFlex>
                                         <mat-label>Mother's Occupation</mat-label>
                                         <input formControlName="MotherOccupation" autocomplete="Off" matInput
-                                            maxlength="50">
+                                            [maxlength]="50">
                                         <span class="text-danger"
                                             *ngIf="f.MotherOccupation.touched && f.MotherOccupation.hasError('required')">Mother's
                                             occupation
@@ -166,35 +172,35 @@
                         <div class="content" fxLayout="row wrap" fxLayoutGap="100px">
                             <mat-form-field appearance="outline">
                                 <mat-label>Student's Contact no.</mat-label>
-                                <input formControlName="ContactNo" autocomplete="Off" #Pincode matInput maxlength="10">
+                                <input formControlName="ContactNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>WhatsApp No.</mat-label>
-                                <input formControlName="WhatsAppNumber" autocomplete="Off" matInput maxlength="10">
+                                <input formControlName="WhatsAppNumber" autocomplete="Off" matInput [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Father's contact no.</mat-label>
                                 <input formControlName="FatherContactNo" autocomplete="Off" #Pincode matInput
-                                    maxlength="10">
+                                    [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Mother's contact no.</mat-label>
                                 <input formControlName="MotherContactNo" autocomplete="Off" #Pincode matInput
-                                    maxlength="10">
+                                    [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Email Id</mat-label>
                                 <input type="email" formControlName="EmailAddress" autocomplete="Off" #Pincode matInput
-                                    maxlength="50">
+                                    [maxlength]="50">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Aadhaar No</mat-label>
-                                <input formControlName="AadharNo" autocomplete="Off" #Pincode matInput maxlength="10">
+                                <input formControlName="AadharNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline" [style.width.pc]="22">
                                 <mat-label>Permanent address</mat-label>
                                 <textarea formControlName="PermanentAddress" autocomplete="Off" matInput
-                                    maxlength="250"></textarea>
+                                    [maxlength]="250"></textarea>
                                 <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
                                 <span class="text-danger"
                                     *ngIf="f.PermanentAddress.touched && f.PermanentAddress.hasError('required')">Permanent
@@ -203,7 +209,7 @@
                             <mat-form-field appearance="outline" [style.width.pc]="22">
                                 <mat-label>Present address</mat-label>
                                 <textarea formControlName="PresentAddress" autocomplete="Off" matInput
-                                    maxlength="250"></textarea>
+                                    [maxlength]="250"></textarea>
                                 <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
                                 <span class="text-danger"
                                     *ngIf="f.PresentAddress.touched && f.PresentAddress.hasError('required')">Present
@@ -223,17 +229,17 @@
                                             <mat-label>Name Of contact person
                                             </mat-label>
                                             <input formControlName="NameOfContactPerson" autocomplete="Off" matInput
-                                                maxlength="50">
+                                                [maxlength]="50">
                                         </mat-form-field>
                                         <mat-form-field appearance="outline">
                                             <mat-label>Relation with contact person</mat-label>
                                             <input formControlName="RelationWithContactPerson" autocomplete="Off"
-                                                matInput maxlength="50">
+                                                matInput [maxlength]="50">
                                         </mat-form-field>
                                         <mat-form-field appearance="outline">
                                             <mat-label>Contact No.</mat-label>
                                             <input formControlName="ContactPersonContactNo" autocomplete="Off" matInput
-                                                maxlength="50">
+                                                [maxlength]="50">
                                         </mat-form-field>
                                     </span>
                                 </span>
@@ -260,15 +266,15 @@
                             <mat-form-field appearance="outline">
                                 <mat-label>Account no.</mat-label>
                                 <input formControlName="BankAccountNo" autocomplete="Off" #Pincode matInput
-                                    maxlength="15">
+                                    [maxlength]="15">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>IFSC</mat-label>
-                                <input formControlName="IFSCCode" autocomplete="Off" #Pincode matInput maxlength="10">
+                                <input formControlName="IFSCCode" autocomplete="Off" #Pincode matInput [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>MICR No.</mat-label>
-                                <input formControlName="MICRNo" autocomplete="Off" #Pincode matInput maxlength="10">
+                                <input formControlName="MICRNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
                             </mat-form-field>
                         </div>
                         <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
@@ -290,12 +296,12 @@
                             <mat-form-field appearance="outline">
                                 <mat-label>Last school attended</mat-label>
                                 <input formControlName="TransferFromSchool" autocomplete="Off" #Pincode matInput
-                                    maxlength="100">
+                                    [maxlength]="100">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Percentage obtained in last examination</mat-label>
                                 <input formControlName="LastSchoolPercentage" autocomplete="Off" #Pincode matInput
-                                    maxlength="10">
+                                    [maxlength]="10">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Class for which admission is sought</mat-label>
@@ -308,7 +314,7 @@
                             </mat-form-field>
                             <mat-form-field appearance="outline" [style.width.pc]="50">
                                 <mat-label>Remarks</mat-label>
-                                <input formControlName="Remarks" autocomplete="Off" #Pincode matInput maxlength="250">
+                                <input formControlName="Remarks" autocomplete="Off" #Pincode matInput [maxlength]="250">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Location</mat-label>
