--- a/src/app/modules/student/dashboardstudent/dashboardstudent.component.html
+++ b/src/app/modules/student/dashboardstudent/dashboardstudent.component.html
@@ -17,7 +17,7 @@
             </mat-form-field>
             <!-- <mat-form-field appearance="outline">
                 <mat-label>Admission Id</mat-label>
-                <input formControlName="StudentId" autocomplete="Off" matInput maxlength="5">
+                <input formControlName="StudentId" autocomplete="Off" matInput [maxlength]="5">
             </mat-form-field> -->
             <mat-form-field appearance="outline" [style.width.px]="250">
                 <mat-label>Father</mat-label>
