--- a/src/app/modules/Reports/schoolreports/resultboard/resultboard.component.html
+++ b/src/app/modules/Reports/schoolreports/resultboard/resultboard.component.html
@@ -24,12 +24,11 @@
             </ng-template>
             <app-today-collection></app-today-collection>
         </mat-tab>        
-        
-        <!-- <mat-tab>
+        <mat-tab>
             <ng-template mat-tab-label>
-                <mat-icon>info</mat-icon>Student Activity
+                <mat-icon>info</mat-icon>Certificates
             </ng-template>
-            <app-studentactivity></app-studentactivity>
-        </mat-tab> -->
+            <app-certificates></app-certificates>
+        </mat-tab>
     </mat-tab-group>
 </div>
