--- a/src/app/modules/control/add-master-data/add-master-data.component.scss
+++ b/src/app/modules/control/add-master-data/add-master-data.component.scss
@@ -17,11 +17,11 @@ app-edit-input {
 }
 
 .boxes {
-    border-collapse: collapse;
-    border         : 1px solid lightgrey;
+    border-collapse : collapse;
+    border          : 1px solid lightgrey;
     background-color: lightgray;
-    padding:15px;
-    margin         : 15px;
+    padding         : 15px;
+    margin          : 15px;
 }
 
 .Header {
@@ -49,5 +49,18 @@ button {
 }
 
 mat-form-field {
-    margin-right: 15px;
-  }
+    margin-right: 5px;
+}
+.mat-column-Description {
+    flex: 1 0 35%;
+}
+.mat-column-Logic {
+    flex: 1 0 20%;
+}
+.mat-column-Sequence,
+.mat-column-Active {
+    flex: 1 0 2%;
+}
+.mat-column-MasterDataName {
+    flex: 1 0 10%;
+}
