--- a/src/app/modules/Reports/schoolreports/certificates/certificates.component.html
+++ b/src/app/modules/Reports/schoolreports/certificates/certificates.component.html
@@ -7,7 +7,7 @@
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
             <form [formGroup]="searchForm">
-                <mat-form-field [style.width.px]="250">
+                <mat-form-field [style.width.px]="250" appearance="outline">
                     <mat-label>student</mat-label>
                     <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
@@ -25,7 +25,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                
+
                 <button [disabled]="loading" class="mat-raised-button" (click)="GetCertificates()">
                     <mat-icon>search</mat-icon>
                 </button>
@@ -34,22 +34,25 @@
                 </button>
             </form>
             <div class="divCls" fxLayoutGap="100px" id="printSection">
-                    <!-- <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef>                      
+                <mat-table [dataSource]="dataSource">
+                    <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index"
+                        matColumnDef="{{disCol}}">
+                        <mat-header-cell *matHeaderCellDef>
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let element" [innerHTML]="element[disCol]">                        
-                             <span [ngStyle]="element['Logic']" ></span>                              
+                        <mat-cell *matCellDef="let element" [innerHTML]="element[disCol] | encodeHTML">
+                            <!-- <span [ngStyle]="element['Logic']" ></span>                               -->
                         </mat-cell>
-                    </ng-container> -->
-                    <!-- <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>                    
-                </mat-table> -->
-                <div fxLayout="column" *ngIf="cerId.length>0" fxLayoutAlign="space-around center">
+                    </ng-container>
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+                </mat-table>
+                <!-- <div fxLayout="column" *ngIf="cerId.length>0" fxLayoutAlign="space-around center">
                     <div *ngFor="let item of CertificateElements;let i=index">
                         <span [innerHTML]="item.Description"></span>
                     </div>
-                </div>
+                </div> -->
             </div>
+            <br>
             <button [disabled]="loading" matTooltip="print" printSectionId="printSection" [useExistingCss]="true"
                 ngxPrint class="mat-raised-button">
                 <mat-icon>print</mat-icon>
