--- a/src/app/modules/Reports/schoolreports/results/results.component.scss
+++ b/src/app/modules/Reports/schoolreports/results/results.component.scss
@@ -1,3 +1,12 @@
-mat-form-field,button{
+mat-form-field,
+button {
     margin-right: 15px;
+}
+
+.mat-row {
+    height: auto;
+}
+
+.mat-cell {
+    padding: 0px;
 }
