--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url('https://fonts.googleapis.com/css2?family=Ewert&display=swap');
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 :root {
@@ -22,7 +22,9 @@ mat-card {
     }
 
 }
-
+.CertificateFont{
+    font-family: 'Ewert', cursive;
+}
 .mat-icon {
     vertical-align: middle;
 }
